made some corrections on logo and alignment

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: "Barlow Condensed", sans-serif;
-  font-size: 20px;
+  font-size: 25px;
   line-height: 1.5;
   margin: 0;
   background-image: url(./annie-spratt-yI3weKNBRTc-unsplash.jpg);
